# CampAIgn-RPG-Studio

./: .env.example  .gitignore  CHANGELOG.md  README.md  biome.json  pyproject.toml
.github/workflows/: ci.yml
area_templates/: room.json
backend/: __init__.py  app.py  area_api.py  area_templates_api.py  command_dispatch.py  concurrency_bridge.py  coordinate_mode_api.py  decoration_assets_api.py  decorations_api.py  entity_form_sections.py  entity_private_data_api.py  entity_templates_api.py  frontend_assets.py  hosting.py  initiative.py  initiative_api.py  interaction_handlers_api.py  lorebooks_api.py  main.py  memory_module_upload.py  memory_modules_api.py  player_seats.py  player_view.py  plugin_context.py  plugin_registry.py  plugin_upload.py  plugins_api.py  prompt_api.py  schemas.py  session_events.py  session_store.py  settings_api.py  snapshot_compat.py  sse.py  turn_runner.py  turn_verbs_api.py  version.py  vision_units_api.py
backend/api/: __init__.py  initiative.py  lorebooks.py  misc.py  player.py  plugins.py  prompt.py  session.py  settings.py  templates.py  turn.py  world.py
entity_templates/: ceramic-ball.json  explorer.json
fixtures/custom_memory/: README.md  rolling_summary_custom.py
frontend/: api.js  app.js  appearance.js  coordinateMode.js  decorations.js  gridViewport.js  handlerParamSchema.js  index.html  initiativeBar.js  lorebooks.js  objectActions.js  panels.js  playerTurnPanel.js  plugins.js  promptLayout.js  settings.js  snapshot.js  styles.css  tabs.js  templateVarsHelp.js  templates.js  ui.js  visionUnits.js
frontend/api/: settings.js
frontend/assets/: README.md
play/generic/: api.js  app.js  decorations.js  index.html  styles.css
plugins/: README.md  __init__.py
plugins/combat/: __init__.py  attack.py  dice.py  equip.py  form_section.py  handlers.py  prompt.py  sheet.py  state.py
plugins/inventory/: __init__.py  from_template.py  handlers.py  interact.py  serialization.py  social.py  state.py
plugins/skills/: __init__.py  dice.py  handlers.py  sheet.py  state.py
reference_handlers/: README.md  __init__.py
reference_handlers/handlers/: __init__.py  delete_self.py  move_area.py  random_move_self.py  spawn_from_template.py
tests/: test_api.py  test_area_templates_api.py  test_combat_plugin.py  test_concurrency_sse.py  test_decorations_api.py  test_entity_templates_api.py  test_frontend_assets.py  test_frontend_plugin_fairness.py  test_gm_setup_ux.py  test_handler_param_schema_js.py  test_hosting.py  test_initiative.py  test_inventory_plugin.py  test_player_api.py  test_plugin_catalog_visibility.py  test_plugins_api.py  test_skills_plugin.py  test_snapshot_compat.py  test_turn_undo.py  world_helpers.py
tests/fixtures/plugins/hello_plugin/: __init__.py
