[project]
name = "realm-studio"
version = "1.0.0"
description = "Reference GM web app for Realm-Fabric — demonstrates the realm-fabric Python library"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "realm-fabric>=1.0.0",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28.0",
]

[project.scripts]
realm-studio = "backend.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
package = true
