[project]
name = "campaign-rpg-studio"
version = "1.4.0"
description = "Reference GM web app for CampAIgn-RPG-Engine — demonstrates the campaign-rpg-engine Python library"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "campaign-rpg-engine>=1.4.0",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28.0",
]

[project.scripts]
campaign-rpg-studio = "backend.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
package = true

# Local co-development: sibling engine checkout (../CampAIgn-RPG-Engine).
# Remove this block and re-lock from PyPI to verify Studio against a published wheel.
[tool.uv.sources]
campaign-rpg-engine = { path = "../CampAIgn-RPG-Engine", editable = true }
